Fix for BUG#3248 "Doc says MyISAM warns if disk full but it does not": we force the message to the error log, and we make it more informative; we treat EDQUOT like ENOSPC.

mysys/errors.c:
  more informative message
mysys/my_fstream.c:
  Treat EDQUOT like ENOSPC.
mysys/my_pread.c:
  Treat EDQUOT like ENOSPC.
mysys/my_write.c:
  Treat EDQUOT like ENOSPC.
mysys/mysys_priv.h:
  Define EDQUOT when it does not exist. Finally decided to put it here after discussion with Monty:
  as this constant is used only in 3 files only in mysys/, I don't make it visible everywhere
  (there currently is no file of choice for such defines; my_base.h does not contain any).
  Using a value which never happens avoids collisions.
sql/mysqld.cc:
  If ME_NOREFRESH, we write message to error log, even if it has been saved for client (because if operation
  is hanging, the message does not get to client now; example is MyISAM waiting for free disk space).